--- a/contact.html
+++ b/contact.html
@@ -98,16 +98,16 @@
             <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mr-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="category.html" class="nav-item nav-link">Category</a>
-                    <a href="single.html" class="nav-item nav-link">Single News</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                        <div class="dropdown-menu rounded-0 m-0">
-                            <a href="#" class="dropdown-item">Menu item 1</a>
-                            <a href="#" class="dropdown-item">Menu item 2</a>
-                            <a href="#" class="dropdown-item">Menu item 3</a>
-                        </div>
-                    </div>
+                    <a href="index.html" class="nav-item nav-link">BUSINESS</a>
+
+                    <a href="index.html" class="nav-item nav-link">ART</a>
+
+                    <a href="index.html" class="nav-item nav-link">BUSINESS</a>
+
+                    <a href="index.html" class="nav-item nav-link">GOSSIP</a>
+
+                    <a href="index.html" class="nav-item nav-link">SPORT</a>
+                    
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 </div>
                 <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
